queries ajustadas
