# src/service/AutorControllerService.js
@@ -1,18 +1,5 @@
 'use strict';
-
-
-/**
- * Delete Autor
- *
- * id Long 
- * no response value expected for this operation
- **/
-exports.deleteAutor = function(id) {
-  return new Promise(function(resolve, reject) {
-    resolve();
-  });
-}
-
+var sql = require('../utils/db.js');
 
 /**
  * Insert Autor
@@ -22,17 +9,38 @@ exports.deleteAutor = function(id) {
  **/
 exports.insertAutor = function(body) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "id_autor" : 7,
-  "nome" : "Enid Blyton",
-  "nacionalidade" : "Inglesa"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    console.log(body);
+    sql.query("INSERT INTO autor (nome, nacionalidade) values (?,?)", [body.nome, body.nacionalidade], function (err, res) {
+      if (err) {
+        console.log(err);
+        reject(err);
+      }else{
+        console.log(res.insertId);
+        resolve(res.insertId);
+      }
+    });
+  });
+}
+
+
+/**
+ * Delete Autor
+ *
+ * id Long 
+ * no response value expected for this operation
+ **/
+ exports.deleteAutor = function(id) {
+  return new Promise(function(resolve, reject) {
+    sql.query("DELETE FROM autor WHERE id_autor = ?", [id], function (err, res) {
+      if (err || !res.affectedRows) {
+        console.log(err);
+        console.log(res);
+        reject();
+      } else{
+        console.log(res);
+        resolve({"deleted ":id})
+      }
+    });
   });
 }
 
@@ -43,19 +51,17 @@ exports.insertAutor = function(body) {
  * id Long 
  * returns Autor
  **/
-exports.retrieveAutorId = function(id) {
+exports.retrieveAutor = function(id) {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = {
-  "id_autor" : 7,
-  "nome" : "Enid Blyton",
-  "nacionalidade" : "Inglesa"
-};
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    sql.query("SELECT * FROM autor WHERE id_autor = ?", [id], function (err, res) {
+      if (err) {
+        console.log(err);
+        reject(err);
+      } else {
+        console.log(res);
+        resolve(res[0]);
+      }
+    });
   });
 }
 
@@ -67,21 +73,15 @@ exports.retrieveAutorId = function(id) {
  **/
 exports.retrieveAutores = function() {
   return new Promise(function(resolve, reject) {
-    var examples = {};
-    examples['application/json'] = [ {
-  "id_autor" : 7,
-  "nome" : "Enid Blyton",
-  "nacionalidade" : "Inglesa"
-}, {
-  "id_autor" : 7,
-  "nome" : "Enid Blyton",
-  "nacionalidade" : "Inglesa"
-} ];
-    if (Object.keys(examples).length > 0) {
-      resolve(examples[Object.keys(examples)[0]]);
-    } else {
-      resolve();
-    }
+    sql.query("SELECT * FROM autor", function (err, res) {
+      if (err) {
+        console.log(err);
+        reject(err);
+      } else {
+        console.log(res);
+        resolve(res);
+      }
+    });
   });
 }
 
@@ -95,7 +95,15 @@ exports.retrieveAutores = function() {
  **/
 exports.updateAutor = function(body,id) {
   return new Promise(function(resolve, reject) {
-    resolve();
+    sql.query("UPDATE autor SET nome = ?, nacionalidade = ? WHERE id_autor = ?", [body.nome, body.nacionalidade, id], function (err, res) {
+      if (err) {
+        console.log(err);
+        reject(err);
+      } else {
+        console.log(res);
+        resolve(res);
+      }
+    });
   });
 }
 
